--- a/WebDev/FullStack/job-search-app/client/public/index.html
+++ b/WebDev/FullStack/job-search-app/client/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Job Search App - A Quick way to keep track of your Applications"
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,9 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>
-      Job Search App - A Quick way to keep track of your Applications
-    </title>
+    <title>The Job Search App - A 1-Stop Shop to Manage your Job Apps!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
